# Sensorless_active_compliance_6RUS

./: README.md
Hexa_Parallel/Matlab/General/: DH_parameters.m  G_matrix_derivation.m  Jacobian.txt  Transform_rot.m  analytical_jacobian.m  ee_wrt_v1_check.m  end_effector_regeneration.m  inv_kin.m  inv_kin_multi_agent  jacobian_derivation.m  kintrajectory.m  parameters.m  plot_runme.m
Hexa_Parallel/Matlab/ReDySim/: analytical_jacobian.m  end_effector.m  end_effector_regeneration.m  for_kine.m  inputs.m  inv_kine.m  invdyn_tree_eff.m  parameters.m  runinv.m
Hexa_Parallel/Python/: .~lock.Current_Feedback_19_Feb.xls#  Current_Feedback_19_Feb.xls  Current_Feedback_19_Force_Feb.xls  Current_Feedback_19_Force_rem_Feb.xls  Current_Feedback_Feb28.xls  Current_feedback_all.py  Ikin_6RUS.py  Ikin_Hexa6RUS.py  Zero_Pos_all.py  gravity_torque_analysis.m  test_write.py  trial.xls
Zamanov/C++(RBDL)/: CMakeLists.txt  Main.cc  README.md  RUS6.cpp  RUS6.hpp  Zamanov_mechanism_animation.csv
Zamanov/Matlab/Hardware/: admittance_control_one_dir.m  check_error.m  current_torque_mapping.m  degree_to_dxl.m  dxl_to_degree.m  end_effector_regeneration.m  inv_kin.m  (+9 more)
Zamanov/Python/: Current_Feedback_Mar7.xls  Current_Feedback_Mar7_w_Force.xls  Current_Feedback_Mar7_w_Force2.xls  Current_Feedback_Mar7_wo_Force.xls  Current_feedback_all.py  Ikin_Zamanov.py  Zero_Pos_all.py  gravity_torque_analysis.m
Zamanov/Results/: current_map.ods  torque_current_mapping.ods
Zamanov/Simulation/: CMakeLists.txt  Main.cc  README.md  RUS6.cpp  RUS6.hpp  Zamanov_mechanism.lua  Zamanov_mechanism_dhs.lua
(+139 files in other folders)
